--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <body>
     <script src="http://fb.me/react-0.11.1.js"></script>
     <script src="http://fb.me/JSXTransformer-0.11.1.js"></script>
+    <script type="text/javascript" src="board.js"></script>
     <script type="text/jsx" src="index.js"></script>
     <div id="boardDiv" />
   </body>
