--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <div id="boardDiv" />
-    <script src="http://fb.me/react-0.11.1.js"></script>
+    <script src="http://fb.me/react-with-addons-0.11.1.js"></script>
     <script src="http://fb.me/JSXTransformer-0.11.1.js"></script>
     <script type="text/javascript" src="board.js"></script>
     <script type="text/jsx" src="index.js"></script>
