--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   </head>
   <body>
     <div id="boardDiv" />
-    <script src="http://fb.me/react-with-addons-0.11.1.js"></script>
-    <script src="http://fb.me/JSXTransformer-0.11.1.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.11.0/react-with-addons.min.js"></script>
     <script type="text/javascript" src="board.js"></script>
-    <script type="text/jsx" src="index.js"></script>
+    <script type="text/javascript" src="built/index.js"></script>
   </body>
 </html>
