Better class manipulation in TileView.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <div id="boardDiv" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.11.0/react-with-addons.min.js"></script>
-    <script type="text/javascript" src="board.js"></script>
+    <script type="text/javascript" src="built/board.js"></script>
     <script type="text/javascript" src="built/index.js"></script>
   </body>
 </html>
