Add disclaimer and details.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
+    <div class="text">
+      <p>
+        This is a clone of <a href="http://gabrielecirulli.github.io/2048/">2048</a>.
+        It's implemented using <a href="http://facebook.github.io/react/index.html">React</a>
+        + <a href="http://facebook.github.io/react/docs/jsx-in-depth.html">JSX</a>
+        and <a href="http://sass-lang.com/">SASS</a>.
+      </p>
+      <p>
+        You can check out the source code <a href="https://github.com/IvanVergiliev/2048-react">here</a>.
+      </p>
+    </div>
     <div id="boardDiv" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.11.0/react-with-addons.min.js"></script>
     <script type="text/javascript" src="built/board.js"></script>
