--- a/index.html
+++ b/index.html
@@ -14,10 +14,24 @@
       <p>
         You can check out the source code <a href="https://github.com/IvanVergiliev/2048-react">here</a>.
       </p>
+      <p>
+        <a href="https://twitter.com/IvanVergiliev" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @IvanVergiliev</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+      </p>
     </div>
     <div id="boardDiv" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.11.0/react-with-addons.min.js"></script>
     <script type="text/javascript" src="built/board.js"></script>
     <script type="text/javascript" src="built/index.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-53685456-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
