Move SASS files to src/ and built files to built/

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="main.css" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="built/main.css" />
+    <link rel="stylesheet" type="text/css" href="built/style.css" />
   </head>
   <body>
     <div class="text">
