--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <head>
     <link rel="stylesheet" type="text/css" href="built/main.css" />
     <link rel="stylesheet" type="text/css" href="built/style.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div class="text">
