Upgrade to React 0.12; use Babel instead of react-tools.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </p>
     </div>
     <div id="boardDiv" />
-    <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.11.0/react-with-addons.min.js"></script>
+    <script src="https://fb.me/react-with-addons-0.12.0.min.js"></script>
     <script type="text/javascript" src="built/board.js"></script>
     <script type="text/javascript" src="built/index.js"></script>
     <script>
