Upgrade to React 15 RC2; switch back to returning null from GameEndOverlay.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       </p>
     </div>
     <div id="boardDiv" />
-    <script src="https://fb.me/react-0.14.0-rc1.min.js"></script>
-    <script src="https://fb.me/react-dom-0.14.0-rc1.min.js"></script>
+    <script src="https://fb.me/react-15.0.0-rc.2.min.js"></script>
+    <script src="https://fb.me/react-dom-15.0.0-rc.2.min.js"></script>
     <script type="text/javascript" src="built/board.js"></script>
     <script type="text/javascript" src="built/index.js"></script>
     <script>
